Fixed positioning of tabs on small devices. Fixed white background on tab next and previous button.

--- a/extensions/ui/org.eclipse.smarthome.ui.paperui/web/css/components.css
+++ b/extensions/ui/org.eclipse.smarthome.ui.paperui/web/css/components.css
@@ -79,8 +79,8 @@ md-tabs {
 	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.15);
 }
 
-md-tabs-canvas {
-    background-color: #ff6600;
+md-tabs md-tabs-wrapper {
+	background-color: #ff6600;
 }
 
 md-tabs section {
